# polyhedra_decomposition

./: .gitignore  .polyscope.ini  CMakeLists.txt  callback.cpp  callback.h  candidates.cpp  candidates.h  check_edges.cpp  check_edges.h  conforming.cpp  conforming.h  conforming_insertion.cpp  conforming_insertion.h  debug.cpp  debug.h  edge_flip_loop.cpp  edge_flip_loop.h  flip.cpp  flip.h  geometry_utils.cpp  geometry_utils.h  height_test.cpp  height_test.h  imgui.ini  input.cpp  input.h  insertion.cpp  insertion.h  main.cpp  müll  output.txt  poset.cpp  poset.h  regularity_check.cpp  regularity_check.h  replay.cpp  replay.h  target_edges.cpp  target_edges.h  ui_callbacks.cpp  (+5 more)
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters  polyhedra_decomposition.sln
build-msvc/main.dir/Release/: main.exe.recipe
build-msvc/main.dir/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main.lastbuildstate
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build-msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
